# django

./: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/ops/: models.py
backend/ops/migrations/: 0001_initial.py
backend/second/: admin.py  models.py
backend/second/migrations/: 0001_initial.py  0002_calculator_iscorrect.py
backend/src/: main.py
backend/src/templates/: calc.html  education.html  index.html  monitor.html  news.html  newsall.html
backend/src/templates/static/: style.css
