[tool.poetry]
name = "django-lesson"
version = "0.1.0"
description = ""
authors = ["DIDIRUS4 <DIDIRUS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
